@@ -259,6 +259,10 @@ New Features
   when generating filter queries from terms returned from field faceting or
   the terms component. Example: fq={!term f=weight}1.5   (hossman, yonik) 
 
+* SOLR-2001: The query component will substitute an empty query that matches
+  no documents if the query parser returns null.  This also prevents an
+  exception from being thrown by the default parser if "q" is missing. (yonik)
+
 
 Optimizations
 ----------------------
